Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -591,7 +591,7 @@
     "es-operation-tax-added-value": "es-operation-tax-added-value",
     "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
     "es-operation-tax-igic": "es-operation-tax-igic",
-    "es-operation-tax-other": "es-operation-tax-other",
+    "es-operation-tax-other": "Operace nepodléhající výše uvedeným daním",
     "es-tax-exception-art-14": "Daňová výjimka (čl. 14)",
     "es-tax-exception-art-7": "Španělsko: N3 Nepodléhá dle čl. 7 LIVA – Operace nepodléhající (vklady, převod UEA, vzorky…)",
     "es-tax-exception-e1": "España: excepción por el artículo 20 de la Ley del IVA",
