--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -165,7 +165,7 @@
     "barcode": "code à barre",
     "bcc": "CCI",
     "become-sponsor": "Devenez sponsor",
-    "benefit-3-parties": "avantage-3-parties",
+    "benefit-3-parties": "Opération au profit de tiers",
     "big": "Grand",
     "billing": "Facturation",
     "billing-address": "Adresse de facturation",
@@ -589,7 +589,7 @@
     "errors": "erreurs",
     "es_EC": "Espagnol (Équateur)",
     "es-operation-tax-added-value": "es-operation-tax-added-value",
-    "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
+    "es-operation-tax-ceuta-melilla": "Opération assujettie à l'IPSI (Ceuta et Melilla)",
     "es-operation-tax-igic": "es-operation-tax-igic",
     "es-operation-tax-other": "es-operation-tax-other",
     "es-tax-exception-art-14": "Espagne : N4 Non soumise (art. 14 LIVA) – Opérations liées aux exportations",
@@ -601,7 +601,7 @@
     "es-tax-exception-e5": "Espagne: exception pour l'article 25 de la loi sur la TVA",
     "es-tax-exception-e6": "Espagne: exception pour une autre raison",
     "es-tax-exception-location-rules": "règles d'exception fiscales espagnoles",
-    "es-tax-exception-n1": "Exception fiscale ES N1",
+    "es-tax-exception-n1": "Opérations intérieures exonérées selon l'article 10.1 de la loi 20\/1991 relative à l'IGIC",
     "es-tax-exception-n5": "Exception fiscale N5",
     "es-tax-exception-passive-subject": "sujet passif d'exception fiscale",
     "es-tax-regime-agrarian": "Régime spécial de l'agriculture, de l'élevage et de la pêche",
@@ -1524,13 +1524,13 @@
     "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Tri par colonne",
     "sort-by-credit-asc": "Trier par crédit croissant",
-    "sort-by-credit-desc": "Ordenar por haber descendente",
+    "sort-by-credit-desc": "Trier par crédit décroissant",
     "sort-by-date-asc": "Trier par date décroissante.",
     "sort-by-date-desc": "Trier par date décroissante.",
     "sort-by-debit-asc": "Trier par débit croissant",
     "sort-by-debit-desc": "Trier par débit décroissant",
-    "sort-by-description-asc": "Ordenar por descripción ascendente",
-    "sort-by-description-desc": "Ordenar por descripción descendente",
+    "sort-by-description-asc": "Trier par description croissante",
+    "sort-by-description-desc": "Trier par description décroissante",
     "sort-by-price-asc": "Trier par prix croissant",
     "sort-by-price-desc": "Trier par prix décroissant",
     "sort-by-ref-asc": "Trier par référence asc.",
