--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -165,7 +165,7 @@
     "barcode": "Codice a barre",
     "bcc": "CCO",
     "become-sponsor": "Diventa sponsor",
-    "benefit-3-parties": "Beneficio a tre parti",
+    "benefit-3-parties": "Operazione con beneficio a terzi",
     "big": "grande",
     "billing": "Fatturazione",
     "billing-address": "Indirizzo Di Fatturazione",
@@ -590,7 +590,7 @@
     "es_EC": "Spagnolo (Ecuador)",
     "es-operation-tax-added-value": "es-operation-tax-added-value",
     "es-operation-tax-ceuta-melilla": "Imposta Ceuta e Melilla",
-    "es-operation-tax-igic": "Imposta IGIC",
+    "es-operation-tax-igic": "Operazione soggetta all'IGIC (Canarie)",
     "es-operation-tax-other": "Altre operazioni fiscali",
     "es-tax-exception-art-14": "eccezione fiscale art. 14",
     "es-tax-exception-art-7": "eccezione fiscale-es-art-7",
