--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -165,7 +165,7 @@
     "barcode": "Codi de barres",
     "bcc": "CCO",
     "become-sponsor": "Fes-te patrocinador",
-    "benefit-3-parties": "benefici-3-partides",
+    "benefit-3-parties": "Operació amb benefici a tercers",
     "big": "Gran",
     "billing": "Facturació",
     "billing-address": "Adreça de facturació",
@@ -256,7 +256,7 @@
     "cifnif": "CIF\/NIF",
     "cities": "Ciutats",
     "city": "Ciutat",
-    "clear-filters": "Limpiar filtros",
+    "clear-filters": "Netejar filtres",
     "click-link-to-add": "Clic en l'enllaç (a dalt) per a afegir",
     "clone": "Duplicar",
     "clone-account-entry": "Duplicar l'assentament comptable",
@@ -588,10 +588,10 @@
     "error-write-cert": "Error en escriure el certificat",
     "errors": "Errades",
     "es_EC": "Espanyol (Ecuador)",
-    "es-operation-tax-added-value": "es-operation-tax-added-value",
+    "es-operation-tax-added-value": "Operació subjecta a l'IVA",
     "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
-    "es-operation-tax-igic": "es-operation-tax-igic",
-    "es-operation-tax-other": "es-operation-tax-other",
+    "es-operation-tax-igic": "Operació subjecta a l'IGIC (Canàries)",
+    "es-operation-tax-other": "Operació no subjecta als impostos anteriors",
     "es-tax-exception-art-14": "excepció fiscal art. 14",
     "es-tax-exception-art-7": "excepció fiscal art. 7",
     "es-tax-exception-e1": "Espanya: excepció per l'article 20 de la Llei de l'IVA",
