--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -165,7 +165,7 @@
     "barcode": "Código de barras",
     "bcc": "CCO",
     "become-sponsor": "Torne-se patrocinador",
-    "benefit-3-parties": "benefício de 3 partes",
+    "benefit-3-parties": "Operação com benefício a terceiros",
     "big": "Grande",
     "billing": "Faturação",
     "billing-address": "Endereço de cobrança",
@@ -591,7 +591,7 @@
     "es-operation-tax-added-value": "es-operation-tax-added-value",
     "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
     "es-operation-tax-igic": "es-operation-tax-igic",
-    "es-operation-tax-other": "es-operation-tax-other",
+    "es-operation-tax-other": "Operação não sujeita aos impostos anteriores",
     "es-tax-exception-art-14": "exceção-fiscal-es-art-14",
     "es-tax-exception-art-7": "exceção de imposto - sujeito passivo",
     "es-tax-exception-e1": "E",
