--- a/Core/Translation/ca_ES.json
+++ b/Core/Translation/ca_ES.json
@@ -601,7 +601,7 @@
     "es-tax-exception-e5": "Espanya: excepció per l'article 25 de la Llei de l'IVA",
     "es-tax-exception-e6": "Espanya: excepció per una altra causa",
     "es-tax-exception-location-rules": "excepció fiscal per normes de localització",
-    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n1": "Operacions interiors exemptes segons l'article 10.1 de la Llei 20\/1991 de l'IGIC",
     "es-tax-exception-n5": "es-tax-exception-n5",
     "es-tax-exception-passive-subject": "excepció fiscal subjecte passiu",
     "es-tax-regime-agrarian": "Règim especial de l'agricultura, la ramaderia i la pesca",
@@ -1586,7 +1586,7 @@
     "subtotal": "Subtotal",
     "subtract": "Restar",
     "success": "Èxit",
-    "successive-tract": "tracte consecutiu",
+    "successive-tract": "Lliurament encadenat",
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "La suma dels nets de les línies d'IVA ha de ser: %lineNet%",
     "sum-total-line-tax-must-be": "La suma dels totals de l'IVA de les línies d'IVA ha de ser: %lineTotalTax%",
