Actualizadas las traducciones.

--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1519,7 +1519,7 @@
     "software": "Software",
     "sort": "Reihenfolge",
     "sort-by-balance-asc": "Nach Saldo aufsteigend sortieren",
-    "sort-by-balance-desc": "Ordenar por saldo descendente",
+    "sort-by-balance-desc": "Nach Saldo absteigend sortieren",
     "sort-by-code-asc": "Nach Code aufsteigend sortieren",
     "sort-by-code-desc": "Ordenar por código descendente",
     "sort-by-column": "Nach Spalte sortieren",
@@ -1529,7 +1529,7 @@
     "sort-by-date-desc": "Nach Datum absteigend sortieren",
     "sort-by-debit-asc": "Nach Soll aufsteigend sortieren",
     "sort-by-debit-desc": "Nach Soll absteigend sortieren",
-    "sort-by-description-asc": "Ordenar por descripción ascendente",
+    "sort-by-description-asc": "Nach Beschreibung aufsteigend sortieren",
     "sort-by-description-desc": "Ordenar por descripción descendente",
     "sort-by-price-asc": "Ordenar por precio ascendente",
     "sort-by-price-desc": "Ordenar por precio descendente",
