--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -601,7 +601,7 @@
     "es-tax-exception-e5": "Spagna: eccezione per l'articolo 25 della legge sull'IVA",
     "es-tax-exception-e6": "Spagna: eccezione per altro motivo",
     "es-tax-exception-location-rules": "Spagna: N2 Non soggetto – Regole di localizzazione dei servizi (artt. 69–70 LIVA, servizi B2B UE o extra UE)",
-    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n1": "Operazioni interne esenti ai sensi dell'articolo 10.1 della Legge 20\/1991 dell'IGIC",
     "es-tax-exception-n5": "Spagna: N5 Esente",
     "es-tax-exception-passive-subject": "Spagna: N6 inversione del soggetto passivo (art. 84 LIVA)",
     "es-tax-regime-agrarian": "Regime speciale dell'agricoltura, dell'allevamento e della pesca",
@@ -1532,11 +1532,11 @@
     "sort-by-description-asc": "Ordina per descrizione crescente",
     "sort-by-description-desc": "Ordenar por descripción descendente",
     "sort-by-price-asc": "Ordina per prezzo crescente",
-    "sort-by-price-desc": "Ordenar por precio descendente",
+    "sort-by-price-desc": "Ordina per prezzo decrescente",
     "sort-by-ref-asc": "Ordina per riferimento asc.",
     "sort-by-ref-desc": "Ordina per riferimento discendente",
     "sort-by-stock-asc": "Ordina per giacenza crescente",
-    "sort-by-stock-desc": "Ordenar por stock descendente",
+    "sort-by-stock-desc": "Ordina per stock decrescente",
     "sorted-asc": "Ordinato ascendente",
     "sorted-desc": "Ordinato discendente",
     "source": "fonte",
