--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -42,7 +42,7 @@
     "accounting-items": "Itens de contabilidade",
     "accounting-lines-error": "erro de linhas de contabilidade",
     "accounting-plan": "plano de contabilidade",
-    "accounting-plan-must-have-at-least-2-levels": "El plan contable debe tener al menos 2 niveles: cuentas y subcuentas.",
+    "accounting-plan-must-have-at-least-2-levels": "O plano contábil deve ter pelo menos 2 níveis: contas e subcontas.",
     "accounting-possible-duplicated": "Possível lançamento contábil duplicado deste outro. Se não houver, para evitar essa mensagem, basta alterar o conceito.",
     "accounting-reports": "Relatórios de contabilidade",
     "accounting-within-regularization": "O registo contábil está dentro de uma regularização de %tax%. Não pode ser excluído.",
@@ -590,7 +590,7 @@
     "es_EC": "Espanhol (Equador)",
     "es-operation-tax-added-value": "es-operation-tax-added-value",
     "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
-    "es-operation-tax-igic": "es-operation-tax-igic",
+    "es-operation-tax-igic": "Operação sujeita ao IGIC (Canárias)",
     "es-operation-tax-other": "Operação não sujeita aos impostos anteriores",
     "es-tax-exception-art-14": "exceção-fiscal-es-art-14",
     "es-tax-exception-art-7": "exceção de imposto - sujeito passivo",
@@ -601,7 +601,7 @@
     "es-tax-exception-e5": "Espanha: exceção pelo artigo 25 da Lei do IVA",
     "es-tax-exception-e6": "E",
     "es-tax-exception-location-rules": "Espanha: N2 Não sujeita – Regras de localização de serviços (arts. 69–70 LIVA, serviços B2B UE ou fora da UE)",
-    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n1": "Operações internas isentas ao abrigo do artigo 10.1 da Lei 20\/1991 do IGIC",
     "es-tax-exception-n5": "es-tax-exception-n5",
     "es-tax-exception-passive-subject": "Exceção fiscal - sujeito passivo",
     "es-tax-regime-agrarian": "R",
@@ -612,7 +612,7 @@
     "es-tax-regime-gold": "Regime especial do ouro de investimento",
     "es-tax-regime-group-entities": "Regime especial do grupo de entidades",
     "es-tax-regime-one-stop-shop-ioss": "es-tax-regime-one-stop-shop-ioss",
-    "es-tax-regime-one-stop-shop-oss": "es-tax-regime-one-stop-shop-oss",
+    "es-tax-regime-one-stop-shop-oss": "Regime fiscal One-Stop-Shop (OSS)",
     "es-tax-regime-simplified": "Regime simplificado de imposto",
     "es-tax-regime-special-retail-traders": "regime fiscal especial para comerciantes varejistas",
     "es-tax-regime-special-small-business": "regime-fiscal-es-pequeno-negócio",
