--- a/Core/Translation/va_ES.json
+++ b/Core/Translation/va_ES.json
@@ -1536,7 +1536,7 @@
     "sort-by-ref-asc": "Ordenar per referència asc.",
     "sort-by-ref-desc": "Ordenar per referència desc.",
     "sort-by-stock-asc": "Ordenar por stock ascendente",
-    "sort-by-stock-desc": "Ordenar por stock descendente",
+    "sort-by-stock-desc": "Ordenar per estoc descendent",
     "sorted-asc": "Ordenat ascendent",
     "sorted-desc": "Ordenat descendent",
     "source": "Fuente",
