--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -588,10 +588,10 @@
     "error-write-cert": "Erreur lors de l'écriture du certificat",
     "errors": "erreurs",
     "es_EC": "Espagnol (Équateur)",
-    "es-operation-tax-added-value": "es-operation-tax-added-value",
+    "es-operation-tax-added-value": "Opération soumise à la TVA",
     "es-operation-tax-ceuta-melilla": "Opération assujettie à l'IPSI (Ceuta et Melilla)",
-    "es-operation-tax-igic": "es-operation-tax-igic",
-    "es-operation-tax-other": "es-operation-tax-other",
+    "es-operation-tax-igic": "Opération soumise à l'IGIC (îles Canaries)",
+    "es-operation-tax-other": "Opération non soumise aux taxes ci-dessus",
     "es-tax-exception-art-14": "Espagne : N4 Non soumise (art. 14 LIVA) – Opérations liées aux exportations",
     "es-tax-exception-art-7": "art 7 d'exception fiscale",
     "es-tax-exception-e1": "Espagne: exception pour l'article 20 de la loi sur la TVA",
@@ -1521,7 +1521,7 @@
     "sort-by-balance-asc": "Trier par solde croissant",
     "sort-by-balance-desc": "Trier par solde décroissant",
     "sort-by-code-asc": "Trier par code croissant",
-    "sort-by-code-desc": "Ordenar por código descendente",
+    "sort-by-code-desc": "Trier par code décroissant",
     "sort-by-column": "Tri par colonne",
     "sort-by-credit-asc": "Trier par crédit croissant",
     "sort-by-credit-desc": "Trier par crédit décroissant",
