--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -601,7 +601,7 @@
     "es-tax-exception-e5": "Espanha: exceção pelo artigo 25 da Lei do IVA",
     "es-tax-exception-e6": "E",
     "es-tax-exception-location-rules": "Espanha: N2 Não sujeita – Regras de localização de serviços (arts. 69–70 LIVA, serviços B2B UE ou fora da UE)",
-    "es-tax-exception-n1": "es-tax-exception-n1",
+    "es-tax-exception-n1": "Operações internas isentas ao abrigo do artigo 10.1 da Lei 20\/1991 do IGIC",
     "es-tax-exception-n5": "es-tax-exception-n5",
     "es-tax-exception-passive-subject": "Espanha: N6 Inversão do sujeito passivo (art. 84 LIVA)",
     "es-tax-regime-agrarian": "R",
@@ -1521,16 +1521,16 @@
     "sort-by-balance-asc": "Ordenar por saldo ascendente",
     "sort-by-balance-desc": "Ordenar por saldo descendente",
     "sort-by-code-asc": "Ordenar por código crescente",
-    "sort-by-code-desc": "Ordenar por código descendente",
+    "sort-by-code-desc": "Ordenar por código decrescente",
     "sort-by-column": "Ordenar por coluna",
-    "sort-by-credit-asc": "Ordenar por haber ascendente",
+    "sort-by-credit-asc": "Ordenar por crédito ascendente",
     "sort-by-credit-desc": "Ordenar por haber descendente",
     "sort-by-date-asc": "Ordenar por data asc.",
     "sort-by-date-desc": "Ordenar por data desc.",
     "sort-by-debit-asc": "Ordenar por debe ascendente",
     "sort-by-debit-desc": "Ordenar por débito decrescente",
     "sort-by-description-asc": "Ordenar por descrição ascendente",
-    "sort-by-description-desc": "Ordenar por descripción descendente",
+    "sort-by-description-desc": "Ordenar por descrição descendente",
     "sort-by-price-asc": "Ordenar por precio ascendente",
     "sort-by-price-desc": "Ordenar por precio descendente",
     "sort-by-ref-asc": "Ordenar por referência asc.",
