Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -165,7 +165,7 @@
     "barcode": "Código de barras",
     "bcc": "CCO",
     "become-sponsor": "Staňte se sponzorem",
-    "benefit-3-parties": "Výhoda třetích stran",
+    "benefit-3-parties": "Výhoda pro třetí strany",
     "big": "Grande",
     "billing": "Facturación",
     "billing-address": "Dirección de facturación",
