--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1532,7 +1532,7 @@
     "sort-by-description-asc": "Nach Beschreibung aufsteigend sortieren",
     "sort-by-description-desc": "Ordenar por descripción descendente",
     "sort-by-price-asc": "Ordenar por precio ascendente",
-    "sort-by-price-desc": "Ordenar por precio descendente",
+    "sort-by-price-desc": "Nach Preis absteigend sortieren",
     "sort-by-ref-asc": "Nach Referenz aufsteigend sortieren",
     "sort-by-ref-desc": "Nach Referenz absteigend sortieren",
     "sort-by-stock-asc": "Nach Lagerbestand aufsteigend sortieren",
