--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1519,7 +1519,7 @@
     "software": "Software",
     "sort": "Ordinare",
     "sort-by-balance-asc": "Ordenar por saldo ascendente",
-    "sort-by-balance-desc": "Ordenar por saldo descendente",
+    "sort-by-balance-desc": "Ordina per saldo decrescente",
     "sort-by-code-asc": "Ordina per codice ascendente",
     "sort-by-code-desc": "Ordina per codice decrescente",
     "sort-by-column": "Ordina per colonna",
