--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -1024,7 +1024,7 @@
     "method-payment": "Método de pagamento",
     "mime-type": "Mime Type",
     "min-fs-version": "Versão min. Core",
-    "min-php-version": "Min. v. PHP",
+    "min-php-version": "Versão mínima do PHP",
     "minimum-amount-with-cifnif": "Valor mínimo com CIF\/NIF",
     "minimum-amount-without-cifnif": "Importe mínimo sem CIF\/NIF",
     "minimum-stock": "Estoque mínimo",
@@ -1524,10 +1524,10 @@
     "sort-by-code-desc": "Ordenar por código decrescente",
     "sort-by-column": "Ordenar por coluna",
     "sort-by-credit-asc": "Ordenar por crédito ascendente",
-    "sort-by-credit-desc": "Ordenar por haber descendente",
+    "sort-by-credit-desc": "Ordenar por crédito descendente",
     "sort-by-date-asc": "Ordenar por data crescente",
     "sort-by-date-desc": "Ordenar por data desc.",
-    "sort-by-debit-asc": "Ordenar por debe ascendente",
+    "sort-by-debit-asc": "Ordenar por débito ascendente",
     "sort-by-debit-desc": "Ordenar por débito descendente",
     "sort-by-description-asc": "Ordenar por descrição ascendente",
     "sort-by-description-desc": "Ordenar por descrição descendente",
