--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -588,7 +588,7 @@
     "error-write-cert": "Erro ao escrever o certificado",
     "errors": "Erros",
     "es_EC": "Espanhol (Equador)",
-    "es-operation-tax-added-value": "es-operation-tax-added-value",
+    "es-operation-tax-added-value": "Operação sujeita a IVA",
     "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
     "es-operation-tax-igic": "es-operation-tax-igic",
     "es-operation-tax-other": "es-operation-tax-other",
@@ -916,7 +916,7 @@
     "last-activity": "Ultima atividade",
     "last-bimester": "Último bimestre",
     "last-block": "Último bloco",
-    "last-duration": "Última duración",
+    "last-duration": "Última duração",
     "last-ip": "Último IP",
     "last-month": "O mês passado",
     "last-price-estimation": "Último preço de orçamento",
@@ -1080,7 +1080,7 @@
     "new-invoice-line-p": "Você pode adicionar um produto pressionando o botão produto ou digitando sua referência ou código de barras no campo código de barras. Ou pressione o botão linha para uma linha sem produto.",
     "new-password": "Nova senha",
     "new-price": "Novo preço",
-    "new-product": "Nuevo producto",
+    "new-product": "Novo produto",
     "new-refund": "Nova Devolução",
     "new-subaccount": "Nova subconta",
     "new-supplier": "Novo Fornecedor",
@@ -1527,7 +1527,7 @@
     "sort-by-credit-desc": "Ordenar por haber descendente",
     "sort-by-date-asc": "Ordenar por data asc.",
     "sort-by-date-desc": "Ordenar por data desc.",
-    "sort-by-debit-asc": "Ordenar por debe ascendente",
+    "sort-by-debit-asc": "Ordenar por débito ascendente",
     "sort-by-debit-desc": "Ordenar por débito decrescente",
     "sort-by-description-asc": "Ordenar por descrição ascendente",
     "sort-by-description-desc": "Ordenar por descrição descendente",
