--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -256,7 +256,7 @@
     "cifnif": "CIF \/ NIF",
     "cities": "Villes",
     "city": "Ville",
-    "clear-filters": "Limpiar filtros",
+    "clear-filters": "Effacer les filtres",
     "click-link-to-add": "Vous pouvez ajouter des fichiers à la bibliothèque, depuis le menu Administration",
     "clone": "Cloner",
     "clone-account-entry": "Dupliquer l'entrée comptable",
