Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -1532,7 +1532,7 @@
     "sort-by-description-asc": "Ordenar por descripción ascendente",
     "sort-by-description-desc": "Ordenar por descripción descendente",
     "sort-by-price-asc": "Ordenar por precio ascendente",
-    "sort-by-price-desc": "Ordenar por precio descendente",
+    "sort-by-price-desc": "Seřadit podle ceny sestupně",
     "sort-by-ref-asc": "Seřadit podle reference vzestupně",
     "sort-by-ref-desc": "Seřadit podle reference sestupně",
     "sort-by-stock-asc": "Ordenar por stock ascendente",
