--- a/Core/Translation/de_DE.json
+++ b/Core/Translation/de_DE.json
@@ -1536,7 +1536,7 @@
     "sort-by-ref-asc": "Nach Referenz aufsteigend sortieren",
     "sort-by-ref-desc": "Nach Referenz absteigend sortieren",
     "sort-by-stock-asc": "Nach Lagerbestand aufsteigend sortieren",
-    "sort-by-stock-desc": "Ordenar por stock descendente",
+    "sort-by-stock-desc": "Nach Lagerbestand (absteigend) sortieren",
     "sorted-asc": "Aufsteigend sortiert",
     "sorted-desc": "Absteigend sortiert",
     "source": "Quelle",
