--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -1080,7 +1080,7 @@
     "new-invoice-line-p": "Puoi aggiungere un prodotto facendo clic sul pulsante prodotto o scrivendo il riferimento o il codice a barre nel campo codice a barre. Oppure premi il pulsante linea per una linea senza prodotto.",
     "new-password": "nuova password",
     "new-price": "Nuovo prezzo",
-    "new-product": "Nuevo producto",
+    "new-product": "Nuovo prodotto",
     "new-refund": "Nuovo rimborso",
     "new-subaccount": "Nuovo sottoconto",
     "new-supplier": "nuovo fornitore",
