--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -589,7 +589,7 @@
     "errors": "Erros",
     "es_EC": "Espanhol (Equador)",
     "es-operation-tax-added-value": "es-operation-tax-added-value",
-    "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
+    "es-operation-tax-ceuta-melilla": "Operação sujeita ao IPSI (Ceuta e Melilla)",
     "es-operation-tax-igic": "Operação sujeita ao IGIC (Canárias)",
     "es-operation-tax-other": "Operação não sujeita aos impostos anteriores",
     "es-tax-exception-art-14": "exceção-fiscal-es-art-14",
@@ -1532,7 +1532,7 @@
     "sort-by-description-asc": "Ordenar por descrição ascendente",
     "sort-by-description-desc": "Ordenar por descrição descendente",
     "sort-by-price-asc": "Ordenar por preço crescente",
-    "sort-by-price-desc": "Ordenar por precio descendente",
+    "sort-by-price-desc": "Ordenar por preço decrescente",
     "sort-by-ref-asc": "Ordenar por referência asc.",
     "sort-by-ref-desc": "Ordenar por referência desc.",
     "sort-by-stock-asc": "Ordenar por estoque ascendente",
