Actualizadas las traducciones.

--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -366,7 +366,7 @@
     "cron-job": "Zeregin programatua",
     "cron-timeout": "Kronoa gelditu da PHP-ren exekuzio denbora maksimoa gainditu ez dadin. Mesedez, exekutatu kronoa terminaletik, mugarik hau saihesteko.",
     "crons": "Krons",
-    "csv-file-must-have-at-least-2-columns": "El CSV debe tener al menos 2 columnas",
+    "csv-file-must-have-at-least-2-columns": "CSV-ak gutxienez 2 zutabe izan behar ditu",
     "currency": "Dibisa",
     "currency-position": "Moneta sinboloaren posizioa",
     "current-quarter": "Laukiztako gertakariak",
@@ -1245,7 +1245,7 @@
     "plugin-disabled": "%pluginName% plugina ondo kendu da.",
     "plugin-enabled": "%pluginName% plugina ondo gaitu da.",
     "plugin-file-too-big": "Zerbitzari honek ez du fitxategiak %size% MB baino handiagoa igotzea baimentzen. Mesedez, PHPn fitxategien igoterako tamaina gehitu edo fitxategia kopiatu Plugins karpetan.",
-    "plugin-folder-not-equal-name": "La carpeta del plugin (%folderName%) no se llama igual que el plugin (%pluginName%)",
+    "plugin-folder-not-equal-name": "Pluginaren karpeta (%folderName%) ez da pluginaren (%pluginName%) izen bera",
     "plugin-installation-disabled": "Plugin instalaketa desaktibatuta dago zerbitzari honetan",
     "plugin-installed": "'%pluginName%' plugina instalatuta",
     "plugin-need-update": "%plugin% pluginak eguneraketa bat beharko du FacturaScripts-en bertsio berriarekin funtzionatzeko.",
