--- a/Core/Translation/fr_FR.json
+++ b/Core/Translation/fr_FR.json
@@ -1535,7 +1535,7 @@
     "sort-by-price-desc": "Trier par prix décroissant",
     "sort-by-ref-asc": "Trier par référence asc.",
     "sort-by-ref-desc": "Trier par référence descendante.",
-    "sort-by-stock-asc": "Ordenar por stock ascendente",
+    "sort-by-stock-asc": "Trier par stock croissant",
     "sort-by-stock-desc": "Trier par stock décroissant",
     "sorted-asc": "Tri par ordre croissant",
     "sorted-desc": "Tri par ordre décroissant",
@@ -1586,7 +1586,7 @@
     "subtotal": "Sous-total",
     "subtract": "Soustraire",
     "success": "Succès",
-    "successive-tract": "Trajet successif",
+    "successive-tract": "Livraison en chaîne",
     "sum": "Somme",
     "sum-netos-line-tax-must-be": "La somme du net des lignes de TVA devrait être: %lineNet%",
     "sum-total-line-tax-must-be": "La somme des totaux de TVA des lignes de TVA devrait être: %lineTotalTax%",
