--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -589,7 +589,7 @@
     "errors": "errori",
     "es_EC": "Spagnolo (Ecuador)",
     "es-operation-tax-added-value": "es-operation-tax-added-value",
-    "es-operation-tax-ceuta-melilla": "Imposta Ceuta e Melilla",
+    "es-operation-tax-ceuta-melilla": "Operazione soggetta all'IPSI (Ceuta e Melilla)",
     "es-operation-tax-igic": "Operazione soggetta all'IGIC (Canarie)",
     "es-operation-tax-other": "Altre operazioni fiscali",
     "es-tax-exception-art-14": "eccezione fiscale art. 14",
@@ -1518,7 +1518,7 @@
     "social-security-number": "Numero di previdenza sociale",
     "software": "Software",
     "sort": "Ordinare",
-    "sort-by-balance-asc": "Ordenar por saldo ascendente",
+    "sort-by-balance-asc": "Ordina per saldo crescente",
     "sort-by-balance-desc": "Ordina per saldo decrescente",
     "sort-by-code-asc": "Ordina per codice ascendente",
     "sort-by-code-desc": "Ordina per codice decrescente",
