Actualizadas las traducciones.

--- a/Core/Translation/cs_CZ.json
+++ b/Core/Translation/cs_CZ.json
@@ -366,7 +366,7 @@
     "cron-job": "Tarea programada",
     "cron-timeout": "Časový limit cronu byl dosažen, aby nedošlo k překročení maximálního běhového limitu PHP. Pro vyhnutí se této limitaci spusťte cron z terminálu.",
     "crons": "Stroje",
-    "csv-file-must-have-at-least-2-columns": "El CSV debe tener al menos 2 columnas",
+    "csv-file-must-have-at-least-2-columns": "Soubor CSV musí mít alespoň 2 sloupce",
     "currency": "Divisa",
     "currency-position": "Posición símbolo de divisa",
     "current-quarter": "Aktuální čtvrtletí",
@@ -1521,13 +1521,13 @@
     "sort-by-balance-asc": "Ordenar por saldo ascendente",
     "sort-by-balance-desc": "Ordenar por saldo descendente",
     "sort-by-code-asc": "Ordenar por código ascendente",
-    "sort-by-code-desc": "Ordenar por código descendente",
+    "sort-by-code-desc": "Seřadit podle kódu sestupně",
     "sort-by-column": "Seřadit podle sloupce",
     "sort-by-credit-asc": "Ordenar por haber ascendente",
     "sort-by-credit-desc": "Ordenar por haber descendente",
     "sort-by-date-asc": "Seřadit podle data vzestupně",
     "sort-by-date-desc": "Seřadit podle data sestupně",
-    "sort-by-debit-asc": "Ordenar por debe ascendente",
+    "sort-by-debit-asc": "Seřadit podle debetu vzestupně",
     "sort-by-debit-desc": "Ordenar por debe descendente",
     "sort-by-description-asc": "Ordenar por descripción ascendente",
     "sort-by-description-desc": "Ordenar por descripción descendente",
@@ -1536,7 +1536,7 @@
     "sort-by-ref-asc": "Seřadit podle reference vzestupně",
     "sort-by-ref-desc": "Seřadit podle reference sestupně",
     "sort-by-stock-asc": "Ordenar por stock ascendente",
-    "sort-by-stock-desc": "Ordenar por stock descendente",
+    "sort-by-stock-desc": "Seřadit podle zásob sestupně",
     "sorted-asc": "Seřazeno vzestupně",
     "sorted-desc": "Seřazeno sestupně",
     "source": "Fuente",
