--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -844,7 +844,7 @@
     "invalid-number": "Número não válido: %number%",
     "invalid-request": "Solicitação inválida",
     "invalid-token": "Token inválido",
-    "invalid-token-p": "O token de acesso para o arquivo %file% não é válido ou expirou",
+    "invalid-token-p": "O token de acesso para o ficheiro %file% não é válido ou expirou",
     "invalid-user-can-permission": "Permissão inválida: %permission%. As permissões disponíveis são access, delete, export, import, update e only-owner-data.",
     "invalid-web": "E",
     "invoice": "Fatura",
@@ -1586,7 +1586,7 @@
     "subtotal": "Subtotal",
     "subtract": "Tirar do estoque",
     "success": "Sucesso",
-    "successive-tract": "trato sucessivo",
+    "successive-tract": "Entrega em cadeia",
     "sum": "Soma",
     "sum-netos-line-tax-must-be": "A soma dos líquidos das linhas de IVA deve ser: %lineNet%",
     "sum-total-line-tax-must-be": "A soma dos impostos totais das linhas de IVA deve ser: %lineTotalTax%",
