--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -590,7 +590,7 @@
     "es_EC": "Espanhol (Equador)",
     "es-operation-tax-added-value": "Operação sujeita a IVA",
     "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
-    "es-operation-tax-igic": "es-operation-tax-igic",
+    "es-operation-tax-igic": "Operação sujeita ao IGIC (Canárias)",
     "es-operation-tax-other": "es-operation-tax-other",
     "es-tax-exception-art-14": "exceção-fiscal-es-art-14",
     "es-tax-exception-art-7": "exceção-fiscal-es-art-7",
@@ -844,7 +844,7 @@
     "invalid-number": "Número não válido: %number%",
     "invalid-request": "Pedido não válido",
     "invalid-token": "Token inválido",
-    "invalid-token-p": "O token de acesso para o arquivo %file% não é válido ou está expirado",
+    "invalid-token-p": "O token de acesso para o ficheiro %file% não é válido ou expirou",
     "invalid-user-can-permission": "Permissão inválida: %permission%. As permissões disponíveis são access, delete, export, import, update e only-owner-data.",
     "invalid-web": "E",
     "invoice": "Fatura",
@@ -1532,7 +1532,7 @@
     "sort-by-description-asc": "Ordenar por descrição ascendente",
     "sort-by-description-desc": "Ordenar por descrição descendente",
     "sort-by-price-asc": "Ordenar por precio ascendente",
-    "sort-by-price-desc": "Ordenar por precio descendente",
+    "sort-by-price-desc": "Ordenar por preço descendente",
     "sort-by-ref-asc": "Ordenar por referência asc.",
     "sort-by-ref-desc": "Ordenar por referência desc.",
     "sort-by-stock-asc": "Ordenar por stock ascendente",
@@ -1586,7 +1586,7 @@
     "subtotal": "Subtotal",
     "subtract": "Tirar do estoque",
     "success": "Sucesso",
-    "successive-tract": "successive-tract",
+    "successive-tract": "Entrega em cadeia",
     "sum": "Soma",
     "sum-netos-line-tax-must-be": "A soma da rede das linhas do IVA deve ser: 0",
     "sum-total-line-tax-must-be": "A soma dos totais IVA das linhas IVA deve ser: 0",
