--- a/Core/Translation/it_IT.json
+++ b/Core/Translation/it_IT.json
@@ -181,7 +181,7 @@
     "box-closed-ok": "Scatola chiusa correttamente",
     "boxes": "Scatole",
     "browse": "Navigare",
-    "browser": "Browser",
+    "browser": "Navigatore",
     "business-name": "Nome commerciale",
     "buy": "comprare",
     "cache": "nascondiglio",
@@ -256,7 +256,7 @@
     "cifnif": "CIF\/NIF",
     "cities": "Città",
     "city": "Città",
-    "clear-filters": "Limpiar filtros",
+    "clear-filters": "Pulire il filttro",
     "click-link-to-add": "Fare clic sul link per aggiungere",
     "clone": "Duplicare",
     "clone-account-entry": "Duplicare la registrazione contabile",
@@ -1528,7 +1528,7 @@
     "sort-by-date-asc": "Ordina per data disc.",
     "sort-by-date-desc": "Ordina per data decrescente",
     "sort-by-debit-asc": "Ordina per debito crescente",
-    "sort-by-debit-desc": "Ordenar por debe descendente",
+    "sort-by-debit-desc": "Ordina per dare decrescente",
     "sort-by-description-asc": "Ordina per descrizione crescente",
     "sort-by-description-desc": "Ordenar por descripción descendente",
     "sort-by-price-asc": "Ordina per prezzo crescente",
