Actualizadas las traducciones.

--- a/Core/Translation/gl_ES.json
+++ b/Core/Translation/gl_ES.json
@@ -165,7 +165,7 @@
     "barcode": "Código de barras",
     "bcc": "BCC",
     "become-sponsor": "Faite patrocinador",
-    "benefit-3-parties": "beneficio-3-partes",
+    "benefit-3-parties": "Operación con beneficio para terceiros",
     "big": "Grande",
     "billing": "Facturación",
     "billing-address": "Enderezo de facturación",
@@ -256,7 +256,7 @@
     "cifnif": "CIF \/ NIF",
     "cities": "Cidades",
     "city": "Cidade",
-    "clear-filters": "Limpiar filtros",
+    "clear-filters": "Limpar filtros",
     "click-link-to-add": "Pode engadir arquivos desde a biblioteca, no menú administrador.",
     "clone": "Duplicar",
     "clone-account-entry": "Duplicar o asento contable",
@@ -588,10 +588,10 @@
     "error-write-cert": "Erro ao escribir o certificado",
     "errors": "Erros",
     "es_EC": "Español (Ecuador)",
-    "es-operation-tax-added-value": "es-operation-tax-added-value",
+    "es-operation-tax-added-value": "Operación suxeita ao IVE",
     "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
-    "es-operation-tax-igic": "es-operation-tax-igic",
-    "es-operation-tax-other": "es-operation-tax-other",
+    "es-operation-tax-igic": "Operación suxeita ao IGIC (Canarias)",
+    "es-operation-tax-other": "Operación non suxeita aos impostos anteriores",
     "es-tax-exception-art-14": "excepción fiscal art. 14",
     "es-tax-exception-art-7": "excepción fiscal art. 7",
     "es-tax-exception-e1": "España: excepción polo artigo 20 da Ley do IVE",
@@ -601,7 +601,7 @@
     "es-tax-exception-e5": "España: excepción polo artigo 25 da Ley do IVE",
     "es-tax-exception-e6": "España: excepción por outra causa",
     "es-tax-exception-location-rules": "normas de localización de excepcións fiscais",
-    "es-tax-exception-n1": "España: N1 No sujeta por reglas de localización en entregas de bienes (art. 68)",
+    "es-tax-exception-n1": "Operacións interiores exentas segundo o artigo 10.1 da Lei 20\/1991 do IGIC",
     "es-tax-exception-n5": "España: N5 No sujeta – disposiciones específicas (OTAN, convenios, etc.)",
     "es-tax-exception-passive-subject": "excepción fiscal suxeito pasivo",
     "es-tax-regime-agrarian": "Rexime especial da agricultura, gandería e pesca",
@@ -1586,7 +1586,7 @@
     "subtotal": "Subtotal",
     "subtract": "Restar",
     "success": "Éxito",
-    "successive-tract": "tracto sucesivo",
+    "successive-tract": "Entrega en cadea",
     "sum": "Suma",
     "sum-netos-line-tax-must-be": "A suma dos netos das liñas de IVE debe ser: %lineNet%",
     "sum-total-line-tax-must-be": "A suma dos totais de IVE das liñas de IVE debe ser: %lineTotalTax%",
