--- a/Core/Translation/en_EN.json
+++ b/Core/Translation/en_EN.json
@@ -588,10 +588,10 @@
     "error-write-cert": "Error writing certificate",
     "errors": "Mistakes",
     "es_EC": "Spanish (Ecuador)",
-    "es-operation-tax-added-value": "es-operation-tax-added-value",
-    "es-operation-tax-ceuta-melilla": "es-operation-tax-ceuta-melilla",
-    "es-operation-tax-igic": "es-operation-tax-igic",
-    "es-operation-tax-other": "es-operation-tax-other",
+    "es-operation-tax-added-value": "Operation subject to VAT",
+    "es-operation-tax-ceuta-melilla": "Operation subject to IPSI (Ceuta and Melilla)",
+    "es-operation-tax-igic": "Operation subject to IGIC (Canary Islands)",
+    "es-operation-tax-other": "Operation not subject to the above taxes",
     "es-tax-exception-art-14": "Tax exception art. 14",
     "es-tax-exception-art-7": "Tax exception art. 7",
     "es-tax-exception-e1": "Spain: exception by article 20 of the VAT Law",
@@ -601,7 +601,7 @@
     "es-tax-exception-e5": "Spain: exception by article 25 of the VAT Law",
     "es-tax-exception-e6": "Spain: exception for another reason",
     "es-tax-exception-location-rules": "es-tax-exception-location-rules.",
-    "es-tax-exception-n1": "ES Tax Exception N1",
+    "es-tax-exception-n1": "Domestic transactions exempt under Article 10.1 of IGIC Law 20\/1991",
     "es-tax-exception-n5": "es-tax-exception-n5",
     "es-tax-exception-passive-subject": "Tax exception for passive subject",
     "es-tax-regime-agrarian": "Special regime for agriculture, livestock and fisheries",
